--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
   "manifest_version": 3,
   "name": "Ad Blocker for YouTube",
-  "version": "1.0.7",
+  "version": "1.1.7",
   "description": "Watch YouTube without any ads!",
-  "author": "Peter Pi",
-  "icons": { "128": "icon_128.png" },
+  "author": "avalynndev",
+  "icons": { "128": "img/icon_128.png" },
   "action": {
-    "default_icon": "icon.png",
+    "default_icon": "img/icon.png",
     "default_popup": "popup.html"
   },
   "background.service_worker": {
-    "scripts": ["eventPage.js"],
+    "scripts": ["scripts/eventPage.js"],
     "persistent": false
   },
   "content_scripts": [
     {
       "matches": ["https://*.youtube.com/*"],
-      "js": ["content.js"]
+      "js": ["scripts/content.js"]
     }
   ],
   "permissions": ["activeTab"]
